RESOLVED FIXED62655
REGRESSION: Drawing video into canvas gets about one frame every 5 seconds (AVFoundation)
https://bugs.webkit.org/show_bug.cgi?id=62655
Summary REGRESSION: Drawing video into canvas gets about one frame every 5 seconds (A...
Jer Noble
Reported 2011-06-14 11:20:32 PDT
REGRESSION: Drawing video into canvas gets about one frame every 5 seconds (AVFoundation)
Attachments
Patch (2.05 KB, patch)
2011-06-14 11:26 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-06-14 11:25:12 PDT
http://www.craftymind.com/factory/html5video/CanvasVideo.html has terrible performance on Lion. On SL, it's pretty smooth, but on Lion the animation is really choppy. Sampling shows lots of time in -[AVAssetImageGenerator copyCGImageAtTime:actualTime:error:] (attached.
Jer Noble
Comment 2 2011-06-14 11:25:26 PDT
Jer Noble
Comment 3 2011-06-14 11:26:38 PDT
Eric Carlson
Comment 4 2011-06-14 11:27:59 PDT
Note that frequency of new frames is directly related to the key frame frequency in the video file because we are not resetting AVFoundation's default of snapping the time value to the nearest key frame time. This makes the title is slightly misleading, as we could get one frame every five seconds, one frame every minute, ten frames per second, etc.
Eric Carlson
Comment 5 2011-06-14 11:28:47 PDT
Comment on attachment 97143 [details] Patch Nice simple fix!
Jer Noble
Comment 6 2011-06-14 13:35:25 PDT
Note You need to log in before you can comment on or make changes to this bug.