third_party/WebKit/Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.mm
@@ -202,6 +202,8 @@ void MediaPlayerPrivateAVFoundationObjC::createContextVideoRenderer()
 
     [m_imageGenerator.get() setApertureMode:AVAssetImageGeneratorApertureModeCleanAperture];
     [m_imageGenerator.get() setAppliesPreferredTrackTransform:YES];
+    [m_imageGenerator.get() setRequestedTimeToleranceBefore:kCMTimeZero];
+    [m_imageGenerator.get() setRequestedTimeToleranceAfter:kCMTimeZero];
 
     LOG(Media, "MediaPlayerPrivateAVFoundationObjC::createImageGenerator(%p) - returning %p", this, m_imageGenerator.get());
 }
